test/sema/typeck/pattern/struct-private-ctor.out
error: constructor of struct `n::Foo` is not accessible.
--> struct-private-ctor.dora:5:9
 | }
 | fn f(x: n::Foo): Int64 {
 |     let n::Foo(a, b) = x;
           ~~~~~~~~~~~~
 |     a
 | }
1 error found.
