test/sema/typeck/pattern/struct-private-ctor.dora
mod n {
    pub struct Foo(pub Int64, String)
}
fn f(x: n::Foo): Int64 {
    let n::Foo(a, b) = x;
    a
}
